include BBDD project

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 DeviceManagement/DeviceManagement.BBDD/obj/Debug/DeviceManagement.BBDD.sqlprojAssemblyReference.cache
 DeviceManagement/DeviceManagement.BBDD/obj/Debug/DeviceManagement.BBDD.sqlproj.FileListAbsolute.txt
 *.pdb
+/DeviceManagement/DeviceManagement.BBDD/obj/Debug/Model.xml
